Set overflow: hidden on the body to fix mobile

--- a/client/app/less/app.less
+++ b/client/app/less/app.less
@@ -11,7 +11,10 @@
 	}
 }
 
-* {
+body {
+	overflow: hidden;
+}
+body, body input, body button {
 	font-family: 'Roboto Slab', sans-serif;
 	color: #333;
 }
